suite/tests/decls/invalid/func-redef-as-local-extern.c
int foo(void)
{
    return 1;
}

int main(void)
{
    extern int foo;
}
